00_backups/playground/_archive/backups/camunda/camunda_on_k8s/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: global
spec:
  rules:
    - host: postgres.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
